style: add avoid-overflowing mixin

--- a/client/assets/variables.scss
+++ b/client/assets/variables.scss
@@ -348,3 +348,10 @@ $__layer-map: (
     margin-right: 8px;
   }
 }
+
+/*
+ * min-width を auto 以外にして親要素をはみ出さないようにする
+ */
+@mixin avoid-overflowing() {
+  min-width: 0;
+}
